--- a/package.json
+++ b/package.json
@@ -4,12 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "image-size": "^1.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "leaflet": "^1.7.1",
     "next": "^10.0.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-cookie-consent": "^6.2.4",
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
+    "react-leaflet": "^3.2.0",
+    "react-share": "^4.4.0",
+    "react-world-flags": "^1.4.0",
+    "responsive-loader": "^2.0.0",
+    "sass": "^1.34.0",
+    "sharp": "^0.28.3",
+    "sitemap": "^7.0.0"
   }
 }
